# minder

./: .dockerignore  .env.example  .gitignore  .mcp.json  Makefile  README-pypi.md  README.md  astro.config.mjs  check_output_new.txt  minder.toml  package.json  pyproject.toml  pytest.ini  scratch.py  scratch_langgraph_test.py  test_mongo.py  tsconfig.json
.antigravitycli/: 57271485-12fb-4272-8b72-7d62b210a543.json
.coder/: FEATURE_dashboard-design-system.md  active-memory.json  active-skills.json  context-state.json  session.md
.coder/sessions/: ses-1775038450.md  ses-1775039008.md  ses-1775093928.md  ses-1775095110.md  ses-1775098374.md  ses-1775103431.md  ses-1775109899.md  ses-1775197444.md  ses-1775198339.md  ses-1775200734.md  ses-1775201620.md  ses-1775202284.md  ses-1775204689.md  ses-1775205307.md  ses-1775206882.md  ses-1775617726.md  ses-1775622834.md  ses-1775624619.md  ses-1775625312.md  ses-1775625646.md  ses-1775629103.md  ses-1775633939.md  ses-1775634636.md  ses-1775642543.md  ses-1775643028.md  ses-1775643381.md  ses-1775643712.md  ses-1775644190.md  ses-1775644531.md  ses-1775697370.md  ses-1775698245.md  ses-1775698529.md  ses-1775698809.md  ses-1775699048.md  ses-1775699945.md  ses-1775700574.md  ses-1775701109.md  ses-1775702248.md  ses-1775702874.md  ses-1775703143.md  (+41 more)
.github/workflows/: ci.yml  release.yml
.minder/: agent.json
docker/: Caddyfile  Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.sandbox  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docs/: PHASE2_MANUAL_TEST.md  PLAN.md  PROJECT_PROGRESS.md  README.md  TASK_BREAKDOWN.md  minder-server.md  system-design.md
docs/architecture/: minder-server.md  system-design.md
docs/design/: cli_edge_extractor_and_graph_sync_architecture.md  mcp-gateway-auth-dashboard.md  p4_3_console_clean_architecture_and_ui_modernization.md  skill_management_and_graph_metadata.md
docs/features/: langgraph-deep-integration.md  skill-management.md
docs/guides/: admin-client-onboarding.md  development.md  local-setup.md  minder-cli.md  production-deployment.md
docs/plan/: 01-product-scope.md  02-architecture.md  03-data-model-and-tools.md  04-workflow-governance.md  05-implementation-phases.md  06-operations-and-delivery.md
docs/progress/: README.md  architecture-transition-cli-edge-sync.md  phase-1-foundation.md  phase-2-1-runtime-fidelity.md  phase-4-0-gateway-auth-and-dashboard-foundation.md  phase-4-1-setup-and-plug-and-play-auth.md  phase-4-4-context-continuity.md  phase-5-learning-and-skill-catalog.md  phase-6-branch-topology-automation.md  phase-7-learning-and-advanced-runtime.md  phase-8-agent-intelligence.md
docs/requirements/: p4_1_dashboard_setup_and_direct_auth.md  p4_3_console_clean_architecture_and_ui_modernization.md  p4_t05_observability.md  skill_management_and_graph_metadata.md
docs/roadmap/: 01-product-scope.md  03-data-model-and-tools.md  04-workflow-governance.md  05-implementation-phases.md  06-operations-and-delivery.md  PLAN.md  PROJECT_PROGRESS.md  TASK_BREAKDOWN.md
scripts/: create_admin.py  dev_server.py  download_models.sh  phase2_manual_smoke.py  reset_admin_api_key.py  seed_skills.py
scripts/release/: install-minder-release.ps1  install-minder-release.sh  uninstall-minder.ps1  uninstall-minder.sh  update-minder.ps1  update-minder.sh
sqlite+aiosqlite:/: :memory:
src/dashboard/: .env.example  .gitignore  astro.config.mjs  package.json
src/minder/: __init__.py  cli.py  config.py  context_compactor.py  continuity.py  dev.py  model_bootstrap.py  runtime.py  server.py  utils.py
tests/: conftest.py
tests/e2e/: test_dashboard_gate.py  test_gateway_auth.py  test_phase4_2_dashboard_gate.py  test_phase4_gateway_auth.py
tests/graph/: test_checkpoint.py  test_interrupt.py  test_state.py  test_supervisor.py
tests/integration/: test_admin_recovery.py  test_agent_self_correction.py  test_assets.py  test_cli_ux.py  test_console_gate.py  test_dashboard_initialization.py  test_docker_deployment.py  test_docker_gate.py  test_fastmcp_gate.py  test_graph_gate.py  test_http_admin.py  test_http_admin_expansion.py  test_tools.py  (+28 more)
tmp/: test_infra.py
(+335 files in other folders)
