[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "minder"
version = "0.1.2"
description = "Minder is an AI MCP server for manage your LLM flow development and memory of AI agent."
readme = "README.md"
requires-python = ">=3.14"
keywords = ["mcp", "cli", "ai", "code-search", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
server = [
    "aiosqlite>=0.21.0",
    "langgraph>=1.1.4",
    "litellm>=1.83.1",
    "llama-cpp-python>=0.3.20",
    "mcp>=1.26.0",
    "motor>=3.7.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings[toml]>=2.13.1",
    "pyjwt>=2.12.1",
    "pymilvus>=2.5.0",
    "redis[hiredis]>=6.0.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.urls]
Homepage = "https://github.com/hiimtrung/minder"
Repository = "https://github.com/hiimtrung/minder"
Documentation = "https://github.com/hiimtrung/minder/tree/main/docs"

[project.scripts]
minder = "minder.cli:main"

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.26.0",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.8",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/minder"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/minder",
]
